--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -214,6 +214,7 @@ span.msg {
 	width: 15%;
 	background: #ffffff 0% 0% no-repeat padding-box;
 	border: 1px solid #ececec;
+	border-bottom: 0;
 }
 
 .admin-content .content .left-side .wrap {
@@ -334,3 +335,205 @@ span.msg {
 }
 
 /* order-section Section */
+
+/* product-section Section */
+.admin-content .content .right-side .product-section .products .product-add-button {
+	margin-bottom: 25px;
+}
+.admin-content .content .right-side .product-section .products .product-add-button button {
+	padding: 15px 20px;
+	background-color: rgb(255, 255, 255);
+	border: 0;
+	background: #ffffff 0% 0% no-repeat padding-box;
+	box-shadow: 0px 3px 6px #8a8a8a19;
+	border-radius: 23px;
+	cursor: pointer;
+}
+
+.admin-content .content .right-side .product-section .products .product-list {
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	grid-gap: 2%;
+}
+.admin-content .content .right-side .product-section .products .product-list .item {
+	padding: 7%;
+	height: 337px;
+	margin-bottom: 20px;
+	background-color: #ffffff;
+	box-shadow: 0px 0px 6px #00000026;
+	border-radius: 10px;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .image-warp {
+	border-radius: 5px;
+	overflow: hidden;
+	height: 63%;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .image-warp img {
+	height: 100%;
+}
+.admin-content .content .right-side .product-section .products .product-list .item .content {
+	height: 37%;
+	padding: 15px 0 0 0;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .content .product-name {
+	font: normal normal normal 18px/25px;
+	font-family: Axiforma-Regular;
+	letter-spacing: 0.31px;
+	color: #4d4d4d;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .content .rate-wrap {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .content .rate-wrap .price {
+	font: normal normal normal 18px/33px Segoe UI;
+
+	letter-spacing: 0px;
+	color: #2b2b2b;
+}
+
+.admin-content .content .right-side .product-section .products .product-list .item .content .rate-wrap .discount-rate {
+	font: normal normal normal 17px/22px Segoe UI;
+	letter-spacing: 0px;
+	color: #000000;
+	background: #ffee00 0% 0% no-repeat padding-box;
+	border-radius: 3px;
+	padding: 5px 10px;
+}
+
+/* product-add Section */
+
+.admin-content .content .right-side .product-section .product-add .inner {
+	width: 300px;
+	min-height: 500px;
+	margin: 0 auto;
+	background: #ffffff 0% 0% no-repeat padding-box;
+	box-shadow: 0px 3px 6px #0000001c;
+	border-radius: 15px;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form {
+	padding: 30px;
+	font-family: Axiforma-Regular;
+	font-size: 15px;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap {
+	overflow: hidden;
+	margin-top: 15px;
+}
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap:first-child {
+	margin-top: 0;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image {
+	overflow: hidden;
+	position: relative;
+	height: 120px;
+	margin-bottom: 10px;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image .img-select {
+	width: 100%;
+	height: 85%;
+	background: #fff700 0% 0% no-repeat padding-box;
+	border-radius: 3px;
+	cursor: pointer;
+	text-align: center;
+	padding: 10px 0;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image span {
+	width: 100%;
+	height: 15%;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	cursor: pointer;
+	opacity: 0;
+	background-color: #ffee00;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image .img-select h5 {
+	font-size: 15px;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap.image .img-select p {
+	font-size: 14px;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form label {
+	user-select: none;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .input-wrap input {
+	background: #ffffff 0% 0% no-repeat padding-box;
+	border: 1px solid #e8e8e8;
+	border-radius: 3px;
+	width: 100%;
+	padding: 9px 10px;
+	outline: none;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form .active label {
+	cursor: pointer;
+
+	float: left;
+}
+.admin-content .content .right-side .product-section .product-add .inner form .active input {
+	float: right;
+	width: 20px;
+	font-size: 20px;
+	min-width: 0.75em;
+	min-height: 20px;
+	margin-right: 0.75em;
+	border: 2px solid currentColor;
+	border-radius: 50%;
+	display: inline-block;
+	cursor: pointer;
+}
+
+.admin-content .content .right-side .product-section .product-add .inner form #create-product {
+	background-color: #fff700;
+	border: 0;
+	padding: 10px;
+	width: 60%;
+	margin: 0 auto;
+	display: block;
+	border-radius: 23px;
+	margin-top: 20px;
+	cursor: pointer;
+	font-family: Axiforma-Regular;
+}
+
+@media all and (max-width: 1200px) {
+	.admin-content .content .right-side .product-section .products .product-list {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
+@media all and (max-width: 830px) {
+	.admin-content .content .right-side .product-section .products .product-list {
+		grid-template-columns: repeat(2, 1fr);
+	}
+}
+
+@media all and (max-width: 630px) {
+	.admin-content .content .right-side .product-section .products .product-list {
+		grid-template-columns: repeat(1, 1fr);
+	}
+}
