--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -89,7 +89,7 @@
 									<div>Status</div>
 								</div>
 								<div id="list-wrap">
-									<div class="list-data">
+									<!-- <div class="list-data">
 										<div class="quantity">1</div>
 										<div class="order-no">35564</div>
 										<div class="item-price">20000</div>
@@ -98,7 +98,7 @@
 											<button id="do-cancel">Cancel</button>
 										</div>
 										<div class="status">Pending</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div>
@@ -174,7 +174,7 @@
 									<button id="add-product">Add New Product</button>
 								</div>
 								<div class="product-list">
-									<div class="item">
+									<!-- <div class="item">
 										<div class="image-warp">
 											<img src="/images/c.jpg" alt="" />
 										</div>
@@ -191,9 +191,12 @@
 												</p>
 											</div>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
+						</div>
+						<div class="promo-code-section hide">
+							<h1 style="font-family: Axiforma-Regular">Back-end functionality and rest api completed for this section but front end is still in process! <a style="color: #838383; text-decoration: underline" target="_blank" href="https://github.com/TasinMir20/zaynaxgroup-task">GitHub source code</a></h1>
 						</div>
 					</div>
 				</div>
