--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -133,6 +133,11 @@
 								</div>
 								<span class="msg-show msg"></span>
 							</div>
+							<div class="shwo-promo-code">
+								<span><%=process.env.PROMO1%></span>, <span><%=process.env.PROMO2%></span>, <span><%=process.env.PROMO3%></span>, <span><%=process.env.PROMO4%></span>,
+								<span><%=process.env.PROMO5%></span>
+								<p>To get discount use these are promo codes</p>
+							</div>
 							<div class="part part3 total-payable">
 								<div class="total-inner">
 									<p>Total Payable</p>
