--- a/public/css/home.css
+++ b/public/css/home.css
@@ -613,6 +613,24 @@ img {
 	border-left: 0;
 }
 
+.checkout-page .container .checkout-body .order-details .order-details-inner .shwo-promo-code {
+	margin: 0 20px;
+}
+
+.checkout-page .container .checkout-body .order-details .order-details-inner .shwo-promo-code span {
+	background-color: rgb(233, 233, 233);
+	padding: 5px 7px;
+	border-radius: 5px;
+	font-family: Axiforma-Regular;
+	font-size: 14px;
+	line-height: 30px;
+}
+.checkout-page .container .checkout-body .order-details .order-details-inner .shwo-promo-code p {
+	padding-top: 5px;
+	font-family: Axiforma-Light;
+	font-size: 14px;
+}
+
 .checkout-page .container .checkout-body .order-details .order-details-inner .total-payable .total-inner {
 	display: flex;
 	flex-direction: row;
