--- a/views/pages/admin.ejs
+++ b/views/pages/admin.ejs
@@ -196,7 +196,35 @@
 							</div>
 						</div>
 						<div class="promo-code-section hide">
-							<h1 style="font-family: Axiforma-Regular">Back-end functionality and rest api completed for this section but front end is still in process! <a style="color: #838383; text-decoration: underline" target="_blank" href="https://github.com/TasinMir20/zaynaxgroup-task">GitHub source code</a></h1>
+							<div class="promocode-add hide">
+								<h1>Add promo code section</h1>
+							</div>
+							<div class="promocodes hide">
+								<div class="promocodes-add-button">
+									<button id="add-promocode-btn">Add New Promo</button>
+								</div>
+								<div class="promocodes-list">
+									<!-- <div class="item">
+										<div class="top">
+											<div class="the-promo-code">
+												<p>Get20</p>
+											</div>
+											<div class="btns">
+												<button class="edit">Edit</button>
+												<button class="active">Active</button>
+											</div>
+										</div>
+										<div class="bottom">
+											<div class="">Created at: 10.09AM, 3/11/2020</div>
+											<div class="usages-time">Usages: 6</div>
+											<div class="use-limit">Usages limit: 100</div>
+											<div class="discount-rate">Discount Rate: 5%</div>
+											<div class="startt-date">Start Date: 1/11/2020</div>
+											<div class="end-date">End Date: 3/11/2020</div>
+										</div>
+									</div> -->
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
