--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -154,7 +154,7 @@
 				<form>
 					<div class="part phone-wrap">
 						<div><label for="phone">Phone Number</label></div>
-						<div class="input-wrap"><input id="phone" type="text" /></div>
+						<div class="input-wrap"><input id="phone" type="text" placeholder="+880" /></div>
 						<span class="msg"></span>
 					</div>
 					<div class="part password-wrap">
